fixed gap about footer on non-homepages

--- a/src/pages/homePage/styles.scss
+++ b/src/pages/homePage/styles.scss
@@ -344,6 +344,7 @@
     .contents {
       color: var(--light-font);
       margin: 0 auto;
+      margin-bottom: 2rem;
       display: flex;
       justify-content: center;
       padding: 4rem 1rem;
