--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -317,7 +317,4 @@ footer {
       }
     }
   }
-  @media screen and (max-width: 400px) {
-    margin-top: 2rem;
-  }
 }
